hphp/test/zend/bad/ext/reflection/tests/015.php
<?php
$ext = new ReflectionExtension("standard");
$inis = $ext->getINIEntries();
var_dump($inis["user_agent"]);
?>
